list parking lots merge
